# zork-rust

./: Cargo.toml  README.md
dump/: inv.rs  player.rs  scene.rs
dump/objects/: book.rs  mailbox.rs
dump/rooms/: cave.rs  exit.rs  forest.rs
src/: game.rs  inv.rs  main.rs  parser.rs  title.rs  title.txt
src/game/: atlas.rs  context.rs  game.rs  mod.rs  parser.rs
src/game/objects/: forest.rs  kitchen.rs  mod.rs
src/mini/: guess.rs  guess.txt
src/objects/: forest.rs  mod.rs
