[package]
name = "zork-rust"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jsuddsjr/zork-rust"
license = "MIT"
description = "A basic Rust implementation of a Zork-like text adventure game."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
rand = "0.8.5"
rust-i18n = "3.0.1"
